added index.js file

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,7 @@
 @import url("dropdown.css"); 
 @import url("content.css");
 @import url("contact.css"); 
-
-
-/*@import url("auth.css");*/
+@import url("auth.css");
 @import url("basis.css");
 
 
