--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@
 
 /* Login */
 @import url("dropdown.css");  /* Login CSS*/
-/* @import url(auth.css); Login CSS */
-
+ /* @import url("auth.css");  */
 
 @import url("content.css");
 
