--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,26 @@
 
-
-
-@import url("lightbox.css");
-@import url("together.css");
-
-@import url("layout.css"); 
-/* @import url("navi-flex.css");  */
-@import url("contact.css"); 
+/* CSS Styleguide */
+/* Budget */
 @import url("budget.css"); 
-@import url("layout-modern.css"); 
 
+/* Community */
+@import url("lightbox.css"); 
+@import url("together.css"); 
 
-@import url("navi-responsive.css");
-@import url("dropdown.css"); 
+/* Login */
+@import url("dropdown.css");  /* Login CSS*/
+ /* @import url("auth.css");  */
+
 @import url("content.css");
-@import url("header.css");
- 
-/* @import url("overview.css");  */
-/* @import url("footer.css");  */
 
-@import url("auth.css");
+@import url("contact.css"); 
+
+/* basic settings */
 @import url("basis.css");
+@import url("layout.css"); 
+@import url("layout-modern.css"); 
+@import url("header.css"); 
+@import url("navi-responsive.css");
 
 
 
@@ -34,5 +34,8 @@
 
 
 
+
+
+/* eof */
 
 
