tatt ut database linken

--- a/index.ejs
+++ b/index.ejs
@@ -171,11 +171,11 @@
 
                     </div>
                     <!-- Today's Task -->
-<h3>Today's Task</h3>
+<h3>Today's Task</h3> 
 <% tasks.forEach(task => { %>
-    <%= task.taskName %><br>
+    <%= task.taskName %>
 <% }); %>
-
+<br>
                 </figure>
 
                 <!-- Your Events -->
